fix hero section 100vh issue on mobile devices

--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -1,5 +1,5 @@
 .hero {
-    height: calc(100vh - $header-height-mobile);
+    height: calc(var(--vh, 1vh) * 100 - $header-height-mobile);
     padding: var(--gutter);
     background: $color-primary no-repeat url('/assets/images/mainpage-kv-mobile.jpg') left top;
     background-size: cover;
